ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/fields/Encrypted_request__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_request__c</fullName>
    <label>Encrypted request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>