ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/fields/Encrypted_response__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_response__c</fullName>
    <label>Encrypted response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>