ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/fields/EncryptedRequestExt__c.field-meta.xml
<CustomField>
    <fullName>EncryptedRequestExt__c</fullName>
    <label>EncryptedRequestExt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>