ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/fields/EncryptedResponseExt__c.field-meta.xml
<CustomField>
    <fullName>EncryptedResponseExt__c</fullName>
    <label>EncryptedResponseExt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>