ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/fields/leadsource__c.field-meta.xml
<CustomField>
    <fullName>leadsource__c</fullName>
    <formula>TEXT( Loan_Application__r.LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>leadsource</label>
    <type>Text</type>
</CustomField>