ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Integration Log</relationshipLabel>
    <relationshipName>Integration_Log</relationshipName>
    <type>Lookup</type>
</CustomField>