ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/fields/Original_request__c.field-meta.xml
<CustomField>
    <fullName>Original_request__c</fullName>
    <label>Original request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>