ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/fields/Original_response__c.field-meta.xml
<CustomField>
    <fullName>Original_response__c</fullName>
    <label>Original response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>