ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/fields/ProCredit_Deals__c.field-meta.xml
<CustomField>
    <fullName>ProCredit_Deals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProCredit Deals</label>
    <referenceTo>ProCredit_Deals__c</referenceTo>
    <relationshipLabel>Integration Log</relationshipLabel>
    <relationshipName>Integration_Log</relationshipName>
    <type>Lookup</type>
</CustomField>