ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/fields/RequestExt__c.field-meta.xml
<CustomField>
    <fullName>RequestExt__c</fullName>
    <label>RequestExt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>