ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/fields/ResponseExt__c.field-meta.xml
<CustomField>
    <fullName>ResponseExt__c</fullName>
    <label>ResponseExt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>