ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/fields/Retry_count__c.field-meta.xml
<CustomField>
    <fullName>Retry_count__c</fullName>
    <label>Retry count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>