ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status flag depicts API Success or failure.</description>
    <label>Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>