ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/fields/targetRecordId__c.field-meta.xml
<CustomField>
    <fullName>targetRecordId__c</fullName>
    <label>targetObjectRecordId</label>
    <length>36</length>
    <type>Text</type>
</CustomField>