ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/fields/Uuid__c.field-meta.xml
<CustomField>
    <fullName>Uuid__c</fullName>
    <label>Uuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>