ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/listViews/Platform_Events.listView-meta.xml
<ListView>
    <fullName>Platform_Events</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Encrypted_request__c</columns>
    <columns>Encrypted_response__c</columns>
    <columns>Original_request__c</columns>
    <columns>Original_response__c</columns>
    <columns>ReferenceId__c</columns>
    <columns>Service_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RequestExt__c</columns>
    <columns>ResponseExt__c</columns>
    <columns>EncryptedResponseExt__c</columns>
    <columns>EncryptedRequestExt__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>targetRecordId__c</columns>
    <filterScope>Everything</filterScope>
    <label>Platform Events</label>
</ListView>