ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/listViews/SMS_consent.listView-meta.xml
<ListView>
    <fullName>SMS_consent</fullName>
    <columns>NAME</columns>
    <columns>Service_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Loan_Application__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loan_Application__c</field>
        <operation>equals</operation>
        <value>L03102401294-A-B</value>
    </filters>
    <label>SMS consent</label>
</ListView>