ProdIND/ProdPrograms/force-app/main/default/objects/Integration_Log__c/listViews/Support_L1_Log.listView-meta.xml
<ListView>
    <fullName>Support_L1_Log</fullName>
    <columns>NAME</columns>
    <columns>Service_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Loan_Application__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Support L1 Log</label>
</ListView>